libsegmentation: Use vpd library
Use the libsegmentation /run location for development only.
Otherwise, use the VPD library to access the VPD, even for testing.

BUG=b:288327526
TEST=Unit test, CQ, test on CBX (brya) and !CBX (octopus).
Test on brya the data is cached, the access is fast once written once.

Cq-Depend: chromium:5185887, chromium:5188179
Change-Id: Ic196c1dc89c2c187b3e98c6380ba910e0e2becf4
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5185748
Reviewed-by: Brian Norris <briannorris@chromium.org>
Tested-by: Gwendal Grignou <gwendal@chromium.org>
Commit-Queue: Gwendal Grignou <gwendal@chromium.org>

--- a/libsegmentation/BUILD.gn
+++ b/libsegmentation/BUILD.gn
@@ -31,7 +31,10 @@ default_pkg_deps = [
 ]
 pkg_config("target_defaults_pkg_deps") {
   pkg_deps = default_pkg_deps
-  libs = [ "rootdev" ]
+  libs = [
+    "rootdev",
+    "vpd",
+  ]
 }
 
 config("target_defaults") {
