debugd: Move to /usr/sbin
Root /sbin is discouraged these days, and we're fighting with the GN
linter (in `cros lint`) to use the (currently-correct) install_path.
Switch to /usr/sbin to make everyone happy.

BUG=none
TEST=debugd starts properly
TEST=`cros lint`

Cq-Depend: chromium:5189677
Change-Id: I7f1b53ff85df10d974d6a737c24b3b3c8c13c66c
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5190534
Tested-by: Brian Norris <briannorris@chromium.org>
Commit-Queue: Brian Norris <briannorris@chromium.org>
Reviewed-by: Jorge Lucangeli Obes <jorgelo@chromium.org>

--- a/debugd/BUILD.gn
+++ b/debugd/BUILD.gn
@@ -200,7 +200,7 @@ install_config("debugd_share_config") {
 
 executable("debugd") {
   sources = [ "src/main.cc" ]
-  install_path = "/sbin"
+  install_path = "sbin"
   configs += [
     ":debugd_config",
     ":target_defaults",
