--- a/debugd/share/debugd.conf
+++ b/debugd/share/debugd.conf
@@ -33,7 +33,7 @@ pre-start script
      /var/log/ || true  # croslint: disable
 end script
 
-exec /sbin/debugd
+exec /usr/sbin/debugd
 
 # Wait for daemon to claim its D-Bus name before transitioning to started.
 post-start exec minijail0 -u chronos -g chronos /usr/bin/gdbus \
