update_engine: Use libvpd
This is simpler than parsing shell output.

Log a TODO while I'm at it, as we're gearing up to remove dump_vpd_log
eventually.

BUG=b:288327526
TEST=CQ

Cq-Depend: chromium:5187961
Change-Id: I52f5084da3043dc6d7ddd2f618a2c7aefaa884d7
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5186947
Tested-by: Brian Norris <briannorris@chromium.org>
Commit-Queue: Brian Norris <briannorris@chromium.org>
Reviewed-by: Jae Hoon Kim <kimjae@chromium.org>

--- a/update_engine/BUILD.gn
+++ b/update_engine/BUILD.gn
@@ -254,6 +254,7 @@ static_library("libupdate_engine") {
     "policy",
     "rootdev",
     "rt",
+    "vpd",
   ]
   all_dependent_pkg_deps = [
     "dbus-1",
