update_engine: Resolve some check-source-files-included.py
./common-mk/check-source-files-included.py complains about several files
that aren't used. Delete some, and add one unused unitest into the
BUILD.gn.

BUG=none
TEST=chromiumos/src/repohooks/pre-upload.py HEAD

Change-Id: I0798f28bbb523b76941f44ce8b032ec9a39a3c9d
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5187411
Tested-by: Brian Norris <briannorris@chromium.org>
Auto-Submit: Brian Norris <briannorris@chromium.org>
Reviewed-by: Jae Hoon Kim <kimjae@chromium.org>
Commit-Queue: Brian Norris <briannorris@chromium.org>
Commit-Queue: Jae Hoon Kim <kimjae@chromium.org>

--- a/update_engine/BUILD.gn
+++ b/update_engine/BUILD.gn
@@ -505,6 +505,7 @@ if (use.test) {
       "common/action_unittest.cc",
       "common/cpu_limiter_unittest.cc",
       "common/error_code_utils_unittest.cc",
+      "common/file_fetcher_unittest.cc",
       "common/hash_calculator_unittest.cc",
       "common/http_fetcher_unittest.cc",
       "common/hwid_override_unittest.cc",
