--- a/installer/BUILD.gn
+++ b/installer/BUILD.gn
@@ -7,25 +7,31 @@ import("//common-mk/pkg_config.gni")
 if (use.lvm_stateful_partition) {
   action("chromeos_install_script") {
     inputs = [ "chromeos-install" ]
-    outputs = [ "${root_gen_dir}/chromeos-install" ]
+    outputs = [ "${root_gen_dir}/chromeos-install.sh" ]
 
     script = "/bin/sh"
     args = [
       "-c",
       "sed '/DEFINE_boolean lvm_stateful/s:FLAGS_FALSE:FLAGS_TRUE:'" +
-          " \$S/chromeos-install > ${root_gen_dir}/chromeos-install",
+          " \$S/chromeos-install > ${root_gen_dir}/chromeos-install.sh",
     ]
   }
 } else {
   copy("chromeos_install_script") {
     sources = [ "chromeos-install" ]
-    outputs = [ "${root_gen_dir}/chromeos-install" ]
+    outputs = [ "${root_gen_dir}/chromeos-install.sh" ]
   }
+}
+
+executable("chromeos-install") {
+  sources = [ "chromeos_install_main.cc" ]
+  configs += [ ":target_defaults" ]
+  install_path = "sbin"
 }
 
 install_config("sbin_scripts") {
   sources = [
-    "${root_gen_dir}/chromeos-install",
+    "${root_gen_dir}/chromeos-install.sh",
     "chromeos-install-kernel",
     "chromeos-postinst",
     "chromeos-recovery",
@@ -68,6 +74,7 @@ install_config("init_confs") {
 
 group("all") {
   deps = [
+    ":chromeos-install",
     ":cros_installer",
     ":crx_import_script",
     ":postinst_script_symlink",
