resourced: Add chromeos-pgmem utility
Reimplement the chromeos-pgmem utility with the new resourced metrics
implementation.

BUG=b:319364562
TEST=Manually check chromeos-pgmem section of chrome://system

Change-Id: I23016e73007273de3236fd0336513ef8ceee441b
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5188239
Commit-Queue: David Stevens <stevensd@chromium.org>
Reviewed-by: Shin Kawamura <kawasin@google.com>
Reviewed-by: Shah Hossain <shahadath@google.com>
Tested-by: David Stevens <stevensd@chromium.org>

--- a/resourced/Cargo.toml
+++ b/resourced/Cargo.toml
@@ -70,3 +70,6 @@ required-features = ["vm_grpc"]
 protoc-grpcio = "2.0.0"
 protoc-rust = "2.27.1"
 anyhow = "1.0"
+
+[[bin]]
+name = "chromeos-pgmem"
