patchpanel: Add ConnmarkUpdater class
Currently we are doing connection connmark update and UDP connection
connmark tracking in QoS service only, while for the newly added ARC
VPN traffic counting feature the same mechanism to update connmark
and track pending connmark update requests for UDP connections is
needed.
This patch plan to move the connmark update management mechanism from
QoS service to a separate class for common use.

BUG=b:177389948
TEST=build

Change-Id: I79123f65f0f448e39bae4b7c236f80306a8bf1ee
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5187235
Reviewed-by: Jie Jiang <jiejiang@chromium.org>
Commit-Queue: Chuwei He <chuweih@google.com>
Tested-by: Chuwei He <chuweih@google.com>
Auto-Submit: Chuwei He <chuweih@google.com>

--- a/patchpanel/BUILD.gn
+++ b/patchpanel/BUILD.gn
@@ -130,6 +130,7 @@ static_library("libpatchpanel") {
     "arc_service.cc",
     "broadcast_forwarder.cc",
     "clat_service.cc",
+    "connmark_updater.cc",
     "conntrack_monitor.cc",
     "counters_service.cc",
     "crostini_service.cc",
@@ -301,6 +302,7 @@ if (use.test) {
       "address_manager_test.cc",
       "arc_service_test.cc",
       "clat_service_test.cc",
+      "connmark_updater_test.cc",
       "conntrack_monitor_test.cc",
       "counters_service_test.cc",
       "crostini_service_test.cc",
@@ -314,6 +316,7 @@ if (use.test) {
       "mac_address_generator_test.cc",
       "manager_test.cc",
       "minijailed_process_runner_test.cc",
+      "mock_connmark_updater.cc",
       "mock_conntrack_monitor.cc",
       "mock_datapath.cc",
       "mock_multicast_counters_service.cc",
