shill: move ConnectionDiagnostic into NetworkMonitor
The ConnectionDiagnostic logic inside the Network class is related to
the network validation. This CL moves the ConnectionDiagnostic logic
from the Network class to NetworkMonitor class.

BUG=b:305129516
TEST=FEATURES=test emerge-brya shill

Change-Id: I629b497ec2df33c641ec26866dd08691c9678c0a
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5187757
Reviewed-by: Jie Jiang <jiejiang@chromium.org>
Tested-by: Chih-Yu Huang <akahuang@chromium.org>
Commit-Queue: Chih-Yu Huang <akahuang@chromium.org>
Reviewed-by: Hugo Benichi <hugobenichi@google.com>

--- a/shill/BUILD.gn
+++ b/shill/BUILD.gn
@@ -756,6 +756,7 @@ if (use.test) {
       "mock_adaptors.cc",
       "mock_ares.cc",
       "mock_certificate_file.cc",
+      "mock_connection_diagnostics.cc",
       "mock_control.cc",
       "mock_device.cc",
       "mock_device_info.cc",
