patchpanel: Always return 0 in pre-start script
Make sure that pre-start script always return 0 so that the main
patchpanel process will never be blocked. Current we observed that on
amd64-generic-asan board, running patchpanel_bpf_loader with minijail0
may return 1. See $BUG for more details.

BUG=b:319584418
TEST=None

Change-Id: Ia7c864d8fa6a3a2fbb26cb388c8fda7c78d7760f
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5188574
Tested-by: Jie Jiang <jiejiang@chromium.org>
Commit-Queue: Jie Jiang <jiejiang@chromium.org>
Reviewed-by: Taoyu Li <taoyl@chromium.org>
Reviewed-by: Hugo Benichi <hugobenichi@google.com>

--- a/patchpanel/init/patchpanel.conf
+++ b/patchpanel/init/patchpanel.conf
@@ -29,6 +29,10 @@ pre-start script
   # but not a daemon.
   minijail0 -u patchpaneld -g patchpaneld -G --no-default-runtime-environment \
             -c cap_bpf=e /usr/bin/patchpanel_bpf_loader
+  # If the pre-start script returns a non-zero status, upstart will treat the
+  # job as failure. Currently we don't have any critical program in this script
+  # which should block the main patchpanel process, so always return true here.
+  true
 end script
 
 script
