--- a/cryptohome/BUILD.gn
+++ b/cryptohome/BUILD.gn
@@ -527,6 +527,7 @@ if (use.test) {
       "libuser_data_auth-client",
       "libuser_data_auth-client-test",
     ]
+    run_test = true
   }
 
   executable("fake_platform_unittest") {
@@ -547,6 +548,7 @@ if (use.test) {
       "libbrillo-test",
       "libchrome-test",
     ]
+    run_test = true
   }
 
   executable("mount_encrypted_unittests") {
@@ -573,6 +575,7 @@ if (use.test) {
     if (use.tpm2) {
       defines = [ "TPM2_MODE=1" ]
     }
+    run_test = true
   }
 
   executable("stateful_recovery_unittests") {
@@ -594,6 +597,7 @@ if (use.test) {
       "libuser_data_auth-client",
       "libuser_data_auth-client-test",
     ]
+    run_test = true
   }
 }
 
