--- a/installer/BUILD.gn
+++ b/installer/BUILD.gn
@@ -24,7 +24,10 @@ if (use.lvm_stateful_partition) {
 }
 
 executable("chromeos-install") {
-  sources = [ "chromeos_install_main.cc" ]
+  sources = [
+    "chromeos_install.cc",
+    "chromeos_install_main.cc",
+  ]
   configs += [ ":target_defaults" ]
   install_path = "sbin"
 }
