debugd: Inline VPD filtering
We don't want to maintain this file on the stateful partition. Generate
it dynamically via libvpd, per go/libvpd-filtering.

Extracted to a helper for sandboxing.

Key list comes from existing src/platform/vpd/util/dump_vpd_log.

BUG=b:77594752
TEST=cros_run_unit_tests
TEST=`generate_logs` produces similar vpd_2.0

Change-Id: Iccdefcd2bf84275b2b2740da3576d8adbce580f9
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5193604
Tested-by: Brian Norris <briannorris@chromium.org>
Reviewed-by: Jorge Lucangeli Obes <jorgelo@chromium.org>
Commit-Queue: Brian Norris <briannorris@chromium.org>

--- a/debugd/BUILD.gn
+++ b/debugd/BUILD.gn
@@ -21,6 +21,7 @@ group("all") {
     ":dev_features_rootfs_verification",
     ":dev_features_ssh",
     ":dev_features_usb_boot",
+    ":filter_vpd",
     ":folder_size_dump",
     ":generate_logs",
     ":icmp",
@@ -307,6 +308,13 @@ executable("audit_log_filter") {
     ":audit_log_utils_config",
   ]
   deps = [ ":libdebugd" ]
+}
+
+executable("filter_vpd") {
+  sources = [ "src/helpers/filter_vpd.cc" ]
+  install_path = debugd_helpers_install_path
+  configs += [ ":target_defaults" ]
+  libs = [ "vpd" ]
 }
 
 pkg_config("folder_size_dump_config") {
