patchpanel: Add NotifyVPNSocketConnectionEvent in manager
This patch added patchpanel method NotifyVPNSocketConnectionEvent in
manager.

BUG=b:177389948
TEST=build

Change-Id: Iad63d08f499f327cd56edf5203b541fe076aec9e
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5190351
Reviewed-by: Jie Jiang <jiejiang@chromium.org>
Commit-Queue: Chuwei He <chuweih@google.com>
Reviewed-by: Hugo Benichi <hugobenichi@google.com>
Tested-by: Chuwei He <chuweih@google.com>

--- a/patchpanel/dbus/org.chromium.Patchpanel.conf
+++ b/patchpanel/dbus/org.chromium.Patchpanel.conf
@@ -34,6 +34,9 @@
            send_member="NotifySocketConnectionEvent" />
     <allow send_destination="org.chromium.PatchPanel"
            send_interface="org.chromium.PatchPanel"
+           send_member="NotifyVPNSocketConnectionEvent" />
+    <allow send_destination="org.chromium.PatchPanel"
+           send_interface="org.chromium.PatchPanel"
            send_member="SetFeatureFlag" />
   </policy>
   <policy user="crosvm">
