--- a/patchpanel/init/patchpanel.conf
+++ b/patchpanel/init/patchpanel.conf
@@ -26,13 +26,10 @@ limit as 400000000 unlimited
 pre-start script
   # CAP_BPF and `--no-default-runtime-environment` to enable bpf operations.
   # `-G` to inherit bpf-access group. Note that this is just a one-shot program
-  # but not a daemon.
+  # but not a daemon. Always ingore the non-zero exit code since it will make
+  # the pre-start script failed and thus block the main patchpanel process.
   minijail0 -u patchpaneld -g patchpaneld -G --no-default-runtime-environment \
-            -c cap_bpf=e /usr/bin/patchpanel_bpf_loader
-  # If the pre-start script returns a non-zero status, upstart will treat the
-  # job as failure. Currently we don't have any critical program in this script
-  # which should block the main patchpanel process, so always return true here.
-  true
+            -c cap_bpf=e /usr/bin/patchpanel_bpf_loader || true
 end script
 
 script
