multiple: Don't recompile featured libs
Change users of featured's libraries to link against the installed .so
libraries rather than recompile them themselves.

This should improve build times for those packages and remove
unnecessary build-time dependencies.

BUG=b:319820222,b:272132524
TEST=build all packages in Portage and in Bazel

Change-Id: I6f7149f7904903a0b2932af3f73275cb408b3eb4
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5196546
Reviewed-by: Miriam Zimmerman <mutexlox@chromium.org>
Commit-Queue: Maksim Ivanov <emaxx@chromium.org>
Reviewed-by: Eric Caruso <ejcaruso@chromium.org>
Reviewed-by: Aya Elsayed <ayaelattar@chromium.org>
Reviewed-by: Jason Ling <jasonling@chromium.org>
Reviewed-by: Leonid Baraz <lbaraz@chromium.org>
Reviewed-by: Raul Rangel <rrangel@chromium.org>
Tested-by: Maksim Ivanov <emaxx@chromium.org>
Commit-Queue: Raul Rangel <rrangel@chromium.org>

--- a/dlp/BUILD.gn
+++ b/dlp/BUILD.gn
@@ -78,7 +78,7 @@ static_library("libdlp_static") {
     "kernel_version_tools.cc",
   ]
   configs += [ ":target_defaults" ]
-  deps = [ "//featured:libfeatures" ]
+  pkg_deps = [ "libfeatures" ]
 }
 
 executable("dlp_init") {
@@ -144,9 +144,9 @@ if (use.test) {
     deps = [
       ":libdlp_static",
       "//common-mk/testrunner:testrunner",
-      "//featured:libfake_platform_features",
       "//metrics:metrics_test_support",
     ]
+    pkg_deps = [ "libfake_platform_features" ]
   }
 }
 
@@ -170,10 +170,12 @@ if (use.fuzzer) {
     deps = [
       ":dlp_adaptor_fuzzer_proto",
       ":libdlp_static",
-      "//featured:libfake_platform_features",
       "//metrics:metrics_test_support",
     ]
-    pkg_deps = [ "libchrome-test" ]
+    pkg_deps = [
+      "libchrome-test",
+      "libfake_platform_features",
+    ]
   }
   config("local_proto_include") {
     include_dirs = [ "${sysroot}/usr/include/dlp/proto_bindings/" ]
