--- a/missive/daemon/BUILD.gn
+++ b/missive/daemon/BUILD.gn
@@ -19,7 +19,6 @@ static_library("missive_daemon") {
   ]
   configs += [ ":target_defaults" ]
   deps = [
-    "//featured:libfeatures",
     "//missive/dbus:dbus_adaptor",
     "//missive/missive:missive_service",
     "//missive/proto:libmissiveprotointerface",
@@ -28,13 +27,13 @@ static_library("missive_daemon") {
     "//missive/resources:resource_manager",
     "//missive/util:status",
   ]
+  pkg_deps = [ "libfeatures" ]
 }
 
 source_set("unit_tests") {
   sources = [ "missive_daemon_test.cc" ]
   deps = [
     ":missive_daemon",
-    "//featured:libfake_platform_features",
     "//missive/dbus:upload_client",
     "//missive/missive:missive_service",
     "//missive/proto:libmissiveprotointerface",
@@ -43,6 +42,7 @@ source_set("unit_tests") {
     "//missive/util:status_macros",
     "//missive/util:test_callbacks_support",
   ]
+  pkg_deps = [ "libfake_platform_features" ]
 
   configs += [ ":target_defaults" ]
 }
