--- a/permission_broker/BUILD.gn
+++ b/permission_broker/BUILD.gn
@@ -83,10 +83,8 @@ static_library("libpermission_broker") {
   ]
   configs += [ ":target_defaults" ]
   libs = [ "policy" ]
-  deps = [
-    ":permission_broker_adaptors",
-    "//featured:libfeatures",
-  ]
+  deps = [ ":permission_broker_adaptors" ]
+  pkg_deps = [ "libfeatures" ]
 }
 
 executable("permission_broker") {
@@ -129,8 +127,8 @@ if (use.test) {
     deps = [
       ":libpermission_broker",
       "//common-mk/testrunner:testrunner",
-      "//featured:libfake_platform_features",
     ]
+    pkg_deps = [ "libfake_platform_features" ]
   }
 }
 
