resourced: Use sysfs APIs guarded by ptrace cap
Add CAP_SYS_PTRACE to resourced. This allows us to make two improvements
to gathering memory stats:

 - Get the exe path from /proc/pid/exe instead of the cmdline
 - Use smaps_rollup instead of totmaps. In addition to letting us drop
   the out-of-tree totmaps changes, smaps_rollup provides access to
   SwapPss, which we can use to avoid double counting swapped anonymous
   memory.

BUG=b:319364562
TEST=cargo test
TEST=cros deploy DUT resourced, verify UMA histograms

Change-Id: I8d9b00074051387adb3117f664b1f7a210f597f3
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5197333
Reviewed-by: Brian Geffon <bgeffon@chromium.org>
Reviewed-by: Allen Webb <allenwebb@google.com>
Tested-by: David Stevens <stevensd@chromium.org>
Commit-Queue: David Stevens <stevensd@chromium.org>

--- a/resourced/init/resourced.conf
+++ b/resourced/init/resourced.conf
@@ -36,10 +36,11 @@ script
     THP_MOUNT="-b /sys/kernel/mm/transparent_hugepage,,1"
   fi
 
-  exec minijail0                                \
-    --config /usr/share/minijail/resourced.conf \
-    ${POWER_CAP_MOUNT}                          \
-    ${THP_MOUNT}                                \
+  exec minijail0                                                        \
+    --config /usr/share/minijail/resourced.conf                         \
+    --seccomp-bpf-binary /usr/share/policy/resourced-seccomp.policy.bpf \
+    ${POWER_CAP_MOUNT}                                                  \
+    ${THP_MOUNT}                                                        \
     -- /usr/bin/resourced
 end script
 
