--- a/resourced/minijail/resourced.conf
+++ b/resourced/minijail/resourced.conf
@@ -95,14 +95,14 @@ g = resourced
 # Inherit supplementary groups from user resourced.
 G
 
-# Add capabilities CAP_SYS_RESOURCE and CAP_SYS_NICE (only the effective
-# capability mask will be considered by minijail0).
-c = cap_sys_resource,cap_sys_nice=e
+# Add capabilities CAP_SYS_RESOURCE, CAP_SYS_NICE, and CAP_SYS_PTRACE (only
+# the effective capability mask will be considered by minijail0).
+#
+# CAP_SYS_PTRACE is needed to read various parts of sysfs. process_vm_read
+# and other more dangerous syscalls are blocked by seccomp.
+c = cap_sys_resource,cap_sys_nice,cap_sys_ptrace=e
 
 # No new privileges (no_new_privs).
 n
-
-# Use the resourced seccomp policy.
-S = /usr/share/policy/resourced-seccomp.policy
 
 # NOTE: We don't add "-e" since we want to receive udev events.
