vm_tools: Add PCI hotplug slots to x86_64 ARC VMs.
This CL adds PCI hotplug slots to x86_64 ARC VMs, which allows PCI
devices to be hotplugged to the VM after it starts.

BUG=b:294777126
TEST=cros_run_unit_tests --board guybrush-arc-t --packages vm_host_tools

Change-Id: I315f450c00891728588320609fc65d57e82086a3
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5198147
Reviewed-by: Nic Hollingum <hollingum@google.com>
Tested-by: Ningyuan Wang <ningyuan@google.com>
Reviewed-by: Keiichi Watanabe <keiichiw@chromium.org>
Commit-Queue: Ningyuan Wang <ningyuan@google.com>

--- a/vm_tools/concierge/BUILD.gn
+++ b/vm_tools/concierge/BUILD.gn
@@ -18,6 +18,13 @@ proto_library("protos") {
 }
 
 static_library("libconcierge") {
+  # TODO(b/293801301): Add PCI hotplug support for aarch64.
+  # PCI hotplug is only enabled on x86_64 architecture.
+  if (current_cpu == "x64") {
+    pci_hotplug_slots = true
+  } else {
+    pci_hotplug_slots = false
+  }
   sources = [
     "arc_vm.cc",
     "balloon_policy.cc",
@@ -104,7 +111,10 @@ static_library("libconcierge") {
     "vboot_host",
     "vm_protos",
   ]
-  defines = [ "USE_ARCVM_GKI=${use.arcvm_gki}" ]
+  defines = [
+    "USE_ARCVM_GKI=${use.arcvm_gki}",
+    "PCI_HOTPLUG_SLOTS=${pci_hotplug_slots}",
+  ]
 
   cflags_cc = [
     "-Werror=deprecated-declarations",
