attestation: Add recoverable key store interface
We want to put the recoverable key store service that require network
service (like fetching the certs from a static site) in an isolated
daemon. pca_agentd is determined to be the suitable daemon as it's used
to serve similar purposes (the network access part needed by
attestationd).

Add another dbus interface to the PcaAgent service, that allows the
fetched certificates to be queried, and also sending signal updates when
they're fetched.

BUG=b:320220928
TEST=build ok

Change-Id: I06ad7820cb164d37c7bed2293e85b9dea38b9c4e
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5195474
Reviewed-by: Yi Chou <yich@google.com>
Tested-by: Howard Yang <hcyang@google.com>
Commit-Queue: Howard Yang <hcyang@google.com>

--- a/attestation/BUILD.gn
+++ b/attestation/BUILD.gn
@@ -254,6 +254,7 @@ source_set("pca_agent_server_library") {
     "pca_agent/server/default_transport_factory.cc",
     "pca_agent/server/pca_agent_service.cc",
     "pca_agent/server/pca_request.cc",
+    "pca_agent/server/rks_agent_service.cc",
   ]
   configs += [ ":target_defaults" ]
   deps = [ ":pca-agent-adaptors" ]
