--- a/attestation/pca_agent/server/org.chromium.PcaAgent.conf
+++ b/attestation/pca_agent/server/org.chromium.PcaAgent.conf
@@ -15,6 +15,7 @@
   <policy user="root">
     <allow own="org.chromium.PcaAgent" />
     <allow send_destination="org.chromium.PcaAgent" />
+    <allow send_destination="org.chromium.RksAgent" />
   </policy>
   <policy context="default">
     <!-- introspection denied -->
