patchpanel: Move earlier in boot sequence
This patches moves patchpanel from system-services earlier into
network-services (essentially boot-services) in the boot sequence, as
now patchpanel is critical for host network connectivity since
crrev/c/5116861.

BUG=b:317756956
TEST=unit
TEST=manual on octopus: measure time before connectivity on boot

Change-Id: I2ca3ba48c929b9d1952fe093da564e063426ff6f
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5198146
Reviewed-by: Jie Jiang <jiejiang@chromium.org>
Reviewed-by: Hugo Benichi <hugobenichi@google.com>
Commit-Queue: Taoyu Li <taoyl@chromium.org>
Tested-by: Taoyu Li <taoyl@chromium.org>

--- a/patchpanel/init/patchpanel.conf
+++ b/patchpanel/init/patchpanel.conf
@@ -5,8 +5,8 @@
 description     "Starts platform guest networking services"
 author          "chromium-os-dev@chromium.org"
 
-start on starting system-services
-stop on stopping system-services
+start on starting network-services and started iptables and started ip6tables
+stop on stopping boot-services
 
 respawn
 respawn limit 3 10
