shill: move icmp and icmp_session into shill/network/ folder
BUG=b:305129516
TEST=FEATURES=test emerge-brya shill

Change-Id: If09221d044a53aec47e803d09b3fd3f57b611929
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5199496
Commit-Queue: Chih-Yu Huang <akahuang@chromium.org>
Reviewed-by: Hugo Benichi <hugobenichi@google.com>
Reviewed-by: Jie Jiang <jiejiang@chromium.org>
Tested-by: Chih-Yu Huang <akahuang@chromium.org>

--- a/shill/BUILD.gn
+++ b/shill/BUILD.gn
@@ -326,8 +326,6 @@ static_library("libshill") {
     "geolocation_info.cc",
     "hook_table.cc",
     "http_request.cc",
-    "icmp.cc",
-    "icmp_session.cc",
     "ipconfig.cc",
     "logging.cc",
     "mac_address.cc",
@@ -342,6 +340,8 @@ static_library("libshill") {
     "network/dhcp_controller.cc",
     "network/dhcp_provider.cc",
     "network/dhcpv4_config.cc",
+    "network/icmp.cc",
+    "network/icmp_session.cc",
     "network/network.cc",
     "network/network_monitor.cc",
     "network/slaac_controller.cc",
@@ -745,8 +745,6 @@ if (use.test) {
       "external_task_test.cc",
       "hook_table_test.cc",
       "http_request_test.cc",
-      "icmp_session_test.cc",
-      "icmp_test.cc",
       "ipconfig_test.cc",
       "mac_address_test.cc",
       "manager_test.cc",
@@ -763,8 +761,6 @@ if (use.test) {
       "mock_event_dispatcher.cc",
       "mock_external_task.cc",
       "mock_file_io.cc",
-      "mock_icmp.cc",
-      "mock_icmp_session.cc",
       "mock_ipconfig.cc",
       "mock_log.cc",
       "mock_log_test.cc",
@@ -786,11 +782,15 @@ if (use.test) {
       "network/dhcp_controller_test.cc",
       "network/dhcp_provider_test.cc",
       "network/dhcpv4_config_test.cc",
+      "network/icmp_session_test.cc",
+      "network/icmp_test.cc",
       "network/mock_capport_proxy.cc",
       "network/mock_connection_diagnostics.cc",
       "network/mock_dhcp_controller.cc",
       "network/mock_dhcp_provider.cc",
       "network/mock_dhcp_proxy.cc",
+      "network/mock_icmp.cc",
+      "network/mock_icmp_session.cc",
       "network/mock_network.cc",
       "network/mock_network_monitor.cc",
       "network/mock_slaac_controller.cc",
