pca_agent: Implement RKS cert fetcher
Implement the certificate fetching logic in pca_agentd.

BUG=b:320220928
TEST=attestation unittests
TEST=on DUT, check that certificate list is fetched successfully. Also
check the requests aren't sent when the WiFi is disconnected, and a
request will be sent immediately after the Wifi is disconnected for a
while and connected back again.

Cq-Depend: chromium:5200247
Change-Id: I0787d66e5cb68479a5f2ac3c71378359da4b4151
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5199376
Reviewed-by: Yi Chou <yich@google.com>
Reviewed-by: Taoyu Li <taoyl@chromium.org>
Tested-by: Howard Yang <hcyang@google.com>
Commit-Queue: Howard Yang <hcyang@google.com>

--- a/attestation/BUILD.gn
+++ b/attestation/BUILD.gn
@@ -255,9 +255,11 @@ source_set("pca_agent_server_library") {
     "pca_agent/server/pca_agent_service.cc",
     "pca_agent/server/pca_request.cc",
     "pca_agent/server/rks_agent_service.cc",
+    "pca_agent/server/rks_cert_fetcher.cc",
   ]
   configs += [ ":target_defaults" ]
   deps = [ ":pca-agent-adaptors" ]
+  pkg_deps = [ "libshill-client" ]
 }
 
 executable("pca_agentd") {
@@ -268,13 +270,10 @@ executable("pca_agentd") {
   ]
   install_path = "sbin"
 
-  # NOSORT
   pkg_deps = [
-    # system_api depends on protobuf (or protobuf-lite). It must appear
-    # before protobuf here or the linker flags won't be in the right
-    # order.
-    "system_api",
+    "libshill-client",
     "protobuf",
+    "system_api",
   ]
   libs = [ "hwsec-profiling" ]
 
@@ -357,6 +356,7 @@ if (use.test) {
       "common/mock_crypto_utility.cc",
       "common/mock_tpm_utility.cc",
       "pca_agent/server/pca_request_test.cc",
+      "pca_agent/server/rks_cert_fetcher_test.cc",
       "server/certificate_queue_test.cc",
       "server/database_impl_test.cc",
       "server/dbus_service_test.cc",
@@ -394,13 +394,11 @@ if (use.test) {
     ]
     run_test = true
 
-    # NOSORT
     pkg_deps = [
-      # system_api depends on protobuf (or protobuf-lite). It must appear
-      # before protobuf here or the linker flags won't be in the right
-      # order.
-      "system_api",
+      "libshill-client",
+      "libshill-client-test",
       "protobuf-lite",
+      "system_api",
     ]
     deps = [
       ":common_library",
