--- a/shill/shims/org.chromium.flimflam.conf
+++ b/shill/shims/org.chromium.flimflam.conf
@@ -340,6 +340,11 @@
                send_interface="org.chromium.flimflam.Manager"
                send_member="DisableTechnology"/>
     </policy>
+    <policy user="attestation">
+        <allow send_destination="org.chromium.flimflam"
+               send_interface="org.chromium.flimflam.Manager"
+               send_member="GetProperties"/>
+    </policy>
     <policy context="default">
         <deny send_destination="org.chromium.flimflam"/>
     </policy>
