libhwsec: Add EventManagement interface
Add the interface to start and stop a event to prioritize the commands.

BUG=b:316089249
TEST=CQ

Change-Id: I33079081568ba5b8b6476b739b0f2312b75e64d2
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5199747
Tested-by: Yi Chou <yich@google.com>
Commit-Queue: Yi Chou <yich@google.com>
Reviewed-by: Ching-Kang Yen <chingkang@chromium.org>

--- a/libhwsec/BUILD.gn
+++ b/libhwsec/BUILD.gn
@@ -256,6 +256,7 @@ source_set("hardware_abstraction_external_library") {
     "${root_gen_dir}/include/libhwsec/structures/signature_sealed_data.cc",
     "factory/factory_impl.cc",
     "factory/instr_profiling.cc",
+    "structures/event.cc",
     "structures/key.cc",
   ]
 
