libhwsec: Implement tpm2 EventManagement
Add the basic implementation of the EventManagement for tpm2 devices.

BUG=b:316089249
TEST=CQ

Change-Id: I3b107df3fdf23079473e15640b5120cddf7dfc09
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5199612
Reviewed-by: Ching-Kang Yen <chingkang@chromium.org>
Commit-Queue: Yi Chou <yich@google.com>
Tested-by: Yi Chou <yich@google.com>

--- a/libhwsec/BUILD.gn
+++ b/libhwsec/BUILD.gn
@@ -356,6 +356,7 @@ source_set("hardware_abstraction_internal_library") {
       "backend/tpm2/da_mitigation.cc",
       "backend/tpm2/deriving.cc",
       "backend/tpm2/encryption.cc",
+      "backend/tpm2/event_management.cc",
       "backend/tpm2/key_management.cc",
       "backend/tpm2/pinweaver.cc",
       "backend/tpm2/random.cc",
