crosier-chrome: Add metadata for more Crosier tests.
BUG=b:294097177
TEST=local build and deploy

Change-Id: I83ddca5e7ccc499e4ef5dcfe56e3cff6cd90717b
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5199827
Commit-Queue: Seewai Fu <seewaifu@google.com>
Auto-Submit: Alex Bergman <abergman@google.com>
Reviewed-by: Seewai Fu <seewaifu@google.com>
Tested-by: Alex Bergman <abergman@google.com>

--- a/crosier-chrome/test_metadata/demo_integration_test.yaml
+++ b/crosier-chrome/test_metadata/demo_integration_test.yaml
@@ -20,5 +20,5 @@ criteria: |
     3 Make sure the page can open successfully.
 cases:
   - id: "NewTab"
-    tags: []
+    tags: ["crosier:crosierdemosuite"]
 ...
