--- a/crosier-chrome/test_metadata/login_integration_test.yaml
+++ b/crosier-chrome/test_metadata/login_integration_test.yaml
@@ -1,22 +1,21 @@
-# Copyright 2023 The ChromiumOS Authors
+# Copyright 2024 The ChromiumOS Authors
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
 # Schema can be found at: platform/dev/test/gtest/gtest_schema.yaml
 ---
 author: "ChromiumOS Authors"
-name: "BluetoothPowerStateObserver"
+name: "LoginIntegrationTest"
 harness: "crosier"
 category: "integration"
 owners:
-  - email: "jamescook@chromium.org"
+  - email: "xiyuan@chromium.org"
   - email: "chromeos-sw-engprod@google.com"
 hw_agnostic: False
 criteria: |
-  Crosier Bluetooth test.
+  Integration test for ChromeOS login using oobe test api,
+  same as Tast's default login.
 cases:
-  - id: "ToggleBluetoothFromQuickSettings"
-    tags: ["crosier:crosierdemosuite"]
-  - id: "ToggleBluetoothFromOsSettings"
+  - id: "TestLogin"
     tags: ["crosier:crosierdemosuite"]
 ...
