--- a/crosier-chrome/test_metadata/multi_page_scan_integration_test.yaml
+++ b/crosier-chrome/test_metadata/multi_page_scan_integration_test.yaml
@@ -1,22 +1,20 @@
-# Copyright 2023 The ChromiumOS Authors
+# Copyright 2024 The ChromiumOS Authors
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
 # Schema can be found at: platform/dev/test/gtest/gtest_schema.yaml
 ---
 author: "ChromiumOS Authors"
-name: "BluetoothPowerStateObserver"
+name: "MultiPageScanIntegrationTest"
 harness: "crosier"
 category: "integration"
 owners:
-  - email: "jamescook@chromium.org"
+  - email: "michaelcheco@google.com"
   - email: "chromeos-sw-engprod@google.com"
-hw_agnostic: False
+hw_agnostic: True
 criteria: |
-  Crosier Bluetooth test.
+  Perform a multi page scan and verify that the scan was performed successfully.
 cases:
-  - id: "ToggleBluetoothFromQuickSettings"
-    tags: ["crosier:crosierdemosuite"]
-  - id: "ToggleBluetoothFromOsSettings"
+  - id: "MultiPageScan"
     tags: ["crosier:crosierdemosuite"]
 ...
