--- a/crosier-chrome/test_metadata/terminal_integration_test.yaml
+++ b/crosier-chrome/test_metadata/terminal_integration_test.yaml
@@ -1,22 +1,21 @@
-# Copyright 2023 The ChromiumOS Authors
+# Copyright 2024 The ChromiumOS Authors
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
 # Schema can be found at: platform/dev/test/gtest/gtest_schema.yaml
 ---
 author: "ChromiumOS Authors"
-name: "BluetoothPowerStateObserver"
+name: "TerminalIntegrationTest"
 harness: "crosier"
 category: "integration"
 owners:
   - email: "jamescook@chromium.org"
+  - email: "brettw@chromium.org"
   - email: "chromeos-sw-engprod@google.com"
-hw_agnostic: False
+hw_agnostic: True
 criteria: |
-  Crosier Bluetooth test.
+  Sends the given text to the element as individual key press commands
 cases:
-  - id: "ToggleBluetoothFromQuickSettings"
-    tags: ["crosier:crosierdemosuite"]
-  - id: "ToggleBluetoothFromOsSettings"
+  - id: "Crosh"
     tags: ["crosier:crosierdemosuite"]
 ...
