--- a/attestation/client/BUILD.gn
+++ b/attestation/client/BUILD.gn
@@ -3,6 +3,16 @@
 # found in the LICENSE file.
 
 import("//common-mk/generate-dbus-proxies.gni")
+import("//common-mk/pkg_config.gni")
+
+group("all") {
+  deps = [
+    ":libattestation-client-headers",
+    ":libattestation-client-test.pc",
+    ":libattestation-client.pc",
+    ":libpca_agent-client-headers",
+  ]
+}
 
 # attestation client library generated headers. Used by other tools to
 # interact with attestation.
@@ -14,6 +24,28 @@ generate_dbus_proxies("libattestation-client-headers") {
   sources = [ "../common/dbus_bindings/org.chromium.Attestation.xml" ]
 }
 
-group("all") {
-  deps = [ ":libattestation-client-headers" ]
+# pca_agent client library generated headers. Used by other tools to
+# interact with pca_agent.
+generate_dbus_proxies("libpca_agent-client-headers") {
+  dbus_service_config = "../pca_agent/dbus_bindings/dbus-service-config.json"
+  proxy_output_file = "include/pca_agent/dbus-proxies.h"
+  mock_output_file = "include/pca_agent/dbus-proxy-mocks.h"
+  proxy_path_in_mocks = "pca_agent-client/pca_agent/dbus-proxies.h"
+  sources = [ "../pca_agent/dbus_bindings/org.chromium.PcaAgent.xml" ]
+}
+
+generate_pkg_config("libattestation-client.pc") {
+  name = "libattestation-client"
+  version = getenv("PV")
+  description = "Attestation client interface library"
+  cflags = [ "-I/usr/include/attestation-client" ]
+  install = true
+}
+
+generate_pkg_config("libattestation-client-test.pc") {
+  name = "libattestation-client-test"
+  version = getenv("PV")
+  description = "Attestation client interface mock library"
+  cflags = [ "-I/usr/include/attestation-client-test" ]
+  install = true
 }
