cryptohome: Use rks_agent service to fetch certs
Connect to the recoverable key store fetcher service in the cert
provider to get certs from the server properly, instead of hardcoding
the current cert.

BUG=b:320220928
TEST=cryptohome unittests

Change-Id: Ifc39f226bf3c5b7f9b35dd49146bc81b57b14706
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5200984
Commit-Queue: Howard Yang <hcyang@google.com>
Reviewed-by: Yi Chou <yich@google.com>
Tested-by: Howard Yang <hcyang@google.com>
Reviewed-by: John Admanski <jadmanski@chromium.org>

--- a/cryptohome/libs/BUILD.gn
+++ b/cryptohome/libs/BUILD.gn
@@ -704,6 +704,7 @@ static_library("libcryptohome") {
   ]
   pkg_deps = [
     "dbus-1",
+    "libattestation-client",
     "libfeatures",
     "libxml-2.0",
   ]
