--- a/cryptohome/BUILD.gn
+++ b/cryptohome/BUILD.gn
@@ -520,6 +520,8 @@ if (use.test) {
 
     pkg_deps = [
       "dbus-1",
+      "libattestation-client",
+      "libattestation-client-test",
       "libbrillo-test",
       "libchrome-test",
       "libecryptfs",
