missive: install go exports under valid modules path
Go modules require all packages to be installed under
paths starting with a domain. In our case the domain
used is go.chromium.org.

This is necessary for ChromeOS to move away from the
old deprecated GOPATH mode and enable modules mode.

BUG=b:187795288
TEST=Local builds in modules + GOPATH mode; CQ.

Cq-Depend: chromium:5206870, chromium:5206771
Change-Id: I8beab35ca7af15c81f0a4dfcfbc7d8dc8c0d78c7
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5206571
Reviewed-by: Vignesh Shenvi <vshenvi@google.com>
Commit-Queue: Adrian Ratiu <adrian.ratiu@collabora.corp-partner.google.com>
Tested-by: Adrian Ratiu <adrian.ratiu@collabora.corp-partner.google.com>
Reviewed-by: Leonid Baraz <lbaraz@chromium.org>

--- a/missive/proto/BUILD.gn
+++ b/missive/proto/BUILD.gn
@@ -108,15 +108,15 @@ goproto_library("libmissive-interface-goprotos") {
   proto_out_dir = "go/src/"
   proto_lib_dirs = [ "//missive/proto/" ]
   import_mapping = [
-    "app_types.proto=chromiumos/reporting",
-    "health.proto=chromiumos/reporting",
-    "metric_data.proto=chromiumos/reporting",
-    "pipeline_interface_sym_for_tast.proto=chromiumos/reporting",
-    "record.proto=chromiumos/reporting",
-    "record_constants.proto=chromiumos/reporting",
-    "status.proto=chromiumos/reporting",
-    "session_affiliated_user.proto=chromiumos/reporting",
-    "upload_tracker.proto=chromiumos/reporting",
+    "app_types.proto=go.chromium.org/chromiumos/reporting",
+    "health.proto=go.chromium.org/chromiumos/reporting",
+    "metric_data.proto=go.chromium.org/chromiumos/reporting",
+    "pipeline_interface_sym_for_tast.proto=go.chromium.org/chromiumos/reporting",
+    "record.proto=go.chromium.org/chromiumos/reporting",
+    "record_constants.proto=go.chromium.org/chromiumos/reporting",
+    "status.proto=go.chromium.org/chromiumos/reporting",
+    "session_affiliated_user.proto=go.chromium.org/chromiumos/reporting",
+    "upload_tracker.proto=go.chromium.org/chromiumos/reporting",
   ]
   sources = [
     "pipeline_interface_sym_for_tast.proto",  # b/261096728
