Revert "installer: Initiate the C++ transition"
This reverts commit dee698dbcb3169e80ac8c5496fcef3946f10a54b.

Reason for revert: b/320396740

Original change's description:
> installer: Initiate the C++ transition
>
> .. by executing the chromeos-install shell script from within
> chromeos_install executable.
>
> BUG=b:319550148
> TEST=cros deploy $IP chromeos-installer
> TEST=/usr/sbin/chromeos_install
>
> Change-Id: I228f1b6325c9329f728e45ff936552182496e901
> Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5188367
> Reviewed-by: Mike Frysinger <vapier@chromium.org>
> Commit-Queue: Jae Hoon Kim <kimjae@chromium.org>
> Tested-by: Jae Hoon Kim <kimjae@chromium.org>

BUG=b:319550148

Change-Id: I94081ad765d4b168fecfb11bc0450887a4d98fe0
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5203378
Reviewed-by: Sarthak Kukreti <sarthakkukreti@google.com>
Commit-Queue: Rubber Stamper <rubber-stamper@appspot.gserviceaccount.com>
Bot-Commit: Rubber Stamper <rubber-stamper@appspot.gserviceaccount.com>
Auto-Submit: Jae Hoon Kim <kimjae@chromium.org>
Commit-Queue: Sarthak Kukreti <sarthakkukreti@google.com>

--- a/installer/BUILD.gn
+++ b/installer/BUILD.gn
@@ -7,31 +7,25 @@ import("//common-mk/pkg_config.gni")
 if (use.lvm_stateful_partition) {
   action("chromeos_install_script") {
     inputs = [ "chromeos-install" ]
-    outputs = [ "${root_gen_dir}/chromeos-install.sh" ]
+    outputs = [ "${root_gen_dir}/chromeos-install" ]
 
     script = "/bin/sh"
     args = [
       "-c",
       "sed '/DEFINE_boolean lvm_stateful/s:FLAGS_FALSE:FLAGS_TRUE:'" +
-          " \$S/chromeos-install > ${root_gen_dir}/chromeos-install.sh",
+          " \$S/chromeos-install > ${root_gen_dir}/chromeos-install",
     ]
   }
 } else {
   copy("chromeos_install_script") {
     sources = [ "chromeos-install" ]
-    outputs = [ "${root_gen_dir}/chromeos-install.sh" ]
+    outputs = [ "${root_gen_dir}/chromeos-install" ]
   }
-}
-
-executable("chromeos-install") {
-  sources = [ "chromeos_install_main.cc" ]
-  configs += [ ":target_defaults" ]
-  install_path = "sbin"
 }
 
 install_config("sbin_scripts") {
   sources = [
-    "${root_gen_dir}/chromeos-install.sh",
+    "${root_gen_dir}/chromeos-install",
     "chromeos-install-kernel",
     "chromeos-postinst",
     "chromeos-recovery",
@@ -74,7 +68,6 @@ install_config("init_confs") {
 
 group("all") {
   deps = [
-    ":chromeos-install",
     ":cros_installer",
     ":crx_import_script",
     ":postinst_script_symlink",
