Revert "installer: Create baseline ChromeOSInstall class"
This reverts commit 72c2c03367477dec1212f4bc4c845c9460296bf0.

Reason for revert: b/320396740

Original change's description:
> installer: Create baseline ChromeOSInstall class
>
> .. to C++'ify further bit by bit.
>
> BUG=b:319550148
> TEST=chromeos-install # on DUT
>
> Change-Id: I258e523098c937fabb0e9e17af174a6a6ec1a723
> Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5191585
> Reviewed-by: Mike Frysinger <vapier@chromium.org>
> Commit-Queue: Jae Hoon Kim <kimjae@chromium.org>
> Reviewed-by: Sarthak Kukreti <sarthakkukreti@google.com>
> Tested-by: Jae Hoon Kim <kimjae@chromium.org>

BUG=b:319550148

Change-Id: Ieb0eaa1544c29553f9e22b2be5232c7f5c2fa76a
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5206325
Bot-Commit: Rubber Stamper <rubber-stamper@appspot.gserviceaccount.com>
Commit-Queue: Sarthak Kukreti <sarthakkukreti@google.com>
Auto-Submit: Jae Hoon Kim <kimjae@chromium.org>
Commit-Queue: Rubber Stamper <rubber-stamper@appspot.gserviceaccount.com>
Reviewed-by: Sarthak Kukreti <sarthakkukreti@google.com>

--- a/installer/BUILD.gn
+++ b/installer/BUILD.gn
@@ -24,10 +24,7 @@ if (use.lvm_stateful_partition) {
 }
 
 executable("chromeos-install") {
-  sources = [
-    "chromeos_install.cc",
-    "chromeos_install_main.cc",
-  ]
+  sources = [ "chromeos_install_main.cc" ]
   configs += [ ":target_defaults" ]
   install_path = "sbin"
 }
