--- a/federated/BUILD.gn
+++ b/federated/BUILD.gn
@@ -47,6 +47,7 @@ generate_mojom_bindings("federated_mojo_bindings") {
   sources = [
     "mojom/example.mojom",
     "mojom/federated_service.mojom",
+    "mojom/tables.mojom",
   ]
 }
 
