--- a/patchpanel/BUILD.gn
+++ b/patchpanel/BUILD.gn
@@ -261,10 +261,12 @@ if (use.fuzzer) {
     sources = [ "multicast_forwarder_fuzzer.cc" ]
     configs += [
       "//common-mk/common_fuzzer",
+      "//common-mk:test",
       ":target_defaults",
       ":fuzzing_config",
     ]
     deps = [ ":libpatchpanel" ]
+    pkg_deps = [ "libchrome-test" ]
   }
 
   executable("ndproxy_fuzzer") {
