--- a/patchpanel/BUILD.gn
+++ b/patchpanel/BUILD.gn
@@ -318,6 +318,7 @@ if (use.test) {
       "mock_datapath.cc",
       "mock_multicast_counters_service.cc",
       "mock_process_runner.cc",
+      "mock_vm_concierge_client.cc",
       "multicast_counters_service_test.cc",
       "multicast_metrics_test.cc",
       "ndproxy_test.cc",
