secagentd: make process_info map autopin
make the process_info map that is populated by the process bpf autopin.
On BPF load if the map is not present then a new map is created and
pinned to /sys/fs/bpf/secagentd/shared_process_info, if the map is
already present then it will be reused.

This is in preparation for process information with the network BPF
program; the motivation being a more complete process principle.

Additionally this pinned BPF map is deleted by secagentd on startup to
prevent stale process information from leaking between executions.

BUG=b:280912069
TEST=ran process exec tast test, unit tests pass.

Change-Id: I183ee5fd1a6bc2e2e8351130827bf87ec0c5f835
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5234589
Auto-Submit: Jason Ling <jasonling@chromium.org>
Tested-by: Jason Ling <jasonling@chromium.org>
Reviewed-by: Ryan Borzello <rborzello@google.com>
Commit-Queue: Jason Ling <jasonling@chromium.org>

--- a/secagentd/init/secagentd.conf
+++ b/secagentd/init/secagentd.conf
@@ -91,7 +91,8 @@ script
   fi
 
   # Args passed to minijail0.
-  jail=""
+  # Inherit supplementary groups.
+  jail="-G"
   # TODO(b/284217921): Fix mounts so other tests do not fail.
   # jail="${jail} -v -Kslave"
   # Intentionally omitted because it causes secagentd to crash.
