--- a/shill/client/BUILD.gn
+++ b/shill/client/BUILD.gn
@@ -5,7 +5,11 @@
 import("//common-mk/generate-dbus-proxies.gni")
 
 group("all") {
-  deps = [ ":libshill-client-headers" ]
+  deps = [
+    ":libshill-client-headers",
+    ":libshill-client-test_pc",
+    ":libshill-client_pc",
+  ]
 }
 
 generate_dbus_proxies("libshill-client-headers") {
@@ -22,4 +26,20 @@ generate_dbus_proxies("libshill-client-headers") {
     "../dbus_bindings/org.chromium.flimflam.Task.dbus-xml",
     "../dbus_bindings/org.chromium.flimflam.ThirdPartyVpn.dbus-xml",
   ]
+}
+
+generate_pkg_config("libshill-client_pc") {
+  name = "libshill-client"
+  description = "shill client interface library"
+  version = getenv("PV")
+  cflags = [ "-I/usr/include/shill-client" ]
+  install = true
+}
+
+generate_pkg_config("libshill-client-test_pc") {
+  name = "libshill-client-test"
+  description = "shill client interface mock library"
+  version = getenv("PV")
+  cflags = [ "-I/usr/include/shill-client-test" ]
+  install = true
 }
