arc: Don't rebuild featured libs.
See https://crrev.com/c/5196546.

This becomes a problem in the child change, where it breaks the build.

BUG=b:318553402
TEST=unit tests

Change-Id: I15ae3c02374594a81c31efe729f92e490d014769
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5213409
Tested-by: Miriam Zimmerman <mutexlox@chromium.org>
Reviewed-by: Yao Li <yaohuali@google.com>
Commit-Queue: Miriam Zimmerman <mutexlox@chromium.org>

--- a/arc/keymint/BUILD.gn
+++ b/arc/keymint/BUILD.gn
@@ -67,8 +67,10 @@ executable("arc-keymintd") {
 
 executable("arc_keymint_feature_query") {
   sources = [ "arc_keymint_feature_query.cc" ]
-  configs += [ "//featured:target_defaults" ]
-  deps = [ "//featured:libfeatures" ]
+  pkg_deps = [
+    "libchrome",
+    "libfeatures",
+  ]
   if (use.keymint) {
     install_path = "sbin"
   }
